Reproduce hidden dialog issue

--- a/src/AvaloniaHangProject/AvaloniaHangProject.csproj
+++ b/src/AvaloniaHangProject/AvaloniaHangProject.csproj
@@ -33,7 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Views\BaseGuidedTourDialogWindow.axaml.cs">
+      <Compile Update="Views\DialogWindow.axaml.cs">
         <DependentUpon>BaseGuidedTourDialogWindow.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
