--- a/src/AvaloniaHangProject/AvaloniaHangProject.csproj
+++ b/src/AvaloniaHangProject/AvaloniaHangProject.csproj
@@ -37,5 +37,6 @@
         <DependentUpon>BaseGuidedTourDialogWindow.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Remove="Views\TabItemsControl.cs" />
     </ItemGroup>
 </Project>
